--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -53,30 +57,14 @@ dependencies {
     //recycler view
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
-    //card view
-    implementation "androidx.cardview:cardview:1.0.0"
-
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
-    //RxJava
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-
-    // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
-    implementation "androidx.room:room-rxjava2:2.3.0"
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha06"
-
     //Gson
-//    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
     //test cases
     testImplementation 'junit:junit:4.13.2'
