--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,9 @@ dependencies {
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
-    //Gson
-    implementation 'com.google.code.gson:gson:2.8.7'
-
     //test cases
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
